--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trading Whales</title>
+    <title>Trading Whales - Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,76 +12,22 @@
         <div class="balance">$4281</div>
         <nav>
             <ul>
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Referrals</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Deposit</a></li>
-                <li><a href="#">Trading Signals</a></li>
-                <li><a href="#">API</a></li>
-                <li><a href="#">Fill Your Tank</a></li>
-                <li><a href="#">Recommendations Bot</a></li>
-                <li><a href="#">Recommendations</a></li>
-                <li><a href="#">Long Term Recommendations</a></li>
+                <li><a href="dashboard.html">Dashboard</a></li>
+                <li><a href="referrals.html">Referrals</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="deposit.html">Deposit</a></li>
+                <li><a href="trading-signals.html">Trading Signals</a></li>
+                <li><a href="api.html">API</a></li>
+                <li><a href="fill-your-tank.html">Fill Your Tank</a></li>
+                <li><a href="recommendations-bot.html">Recommendations Bot</a></li>
+                <li><a href="recommendations.html">Recommendations</a></li>
+                <li><a href="long-term-recommendations.html">Long Term Recommendations</a></li>
             </ul>
         </nav>
     </div>
     <div class="main-content">
-        <h1>Recommendations</h1>
-        <button class="load-recommendations">Load Recommendations</button>
-        <div class="search-bar">
-            <input type="text" placeholder="Search">
-        </div>
-        <div class="card">
-            <h2>ADAUSDT</h2>
-            <button class="show-chart">Show Chart</button>
-            <div class="price-info">
-                <p>Price: 1.1106</p>
-                <p>Change: -0.95% (0.01)</p>
-                <p>Date: 21 hours ago</p>
-            </div>
-            <div class="buy-sell">
-                <p>Buy Price: 1.09622 USDT</p>
-                <p>Sell Price: 1.096223063 USDT</p>
-            </div>
-        </div>
-        <div class="technical-analysis">
-            <h2>Technical Analysis for ADAUSDT</h2>
-            <div class="time-frames">
-                <button class="time-frame" data-time="1">1 minute</button>
-                <button class="time-frame" data-time="5">5 minutes</button>
-                <button class="time-frame" data-time="15">15 minutes</button>
-                <button class="time-frame" data-time="30">30 minutes</button>
-                <button class="time-frame" data-time="60">1 hour</button>
-                <button class="time-frame" data-time="more">More</button>
-            </div>
-            <div class="gauge">
-                <p>Sell: 16</p>
-                <p>Neutral: 8</p>
-                <p>Buy: 2</p>
-            </div>
-            <div class="targets">
-                <div class="target">
-                    <p>Target 1</p>
-                    <p>1.1106 USDT</p>
-                    <p>TP: (1.48%)</p>
-                </div>
-                <div class="target">
-                    <p>Target 2</p>
-                    <p>1.1106 USDT</p>
-                    <p>TP: (6.61%)</p>
-                </div>
-                <div class="target">
-                    <p>Target 3</p>
-                    <p>1.1106 USDT</p>
-                    <p>TP: (10.30%)</p>
-                </div>
-            </div>
-            <div class="stop-loss">
-                <p>Stop Loss</p>
-                <p>1.095892412 USDT</p>
-                <p>Risk: (0.43%)</p>
-            </div>
-        </div>
+        <h1>Dashboard</h1>
+        <!-- Contenu de la page Dashboard -->
     </div>
     <script src="script.js"></script>
 </body>
